<!--
  ~ Created by rogergcc
  ~ Copyright Ⓒ 2019 . All rights reserved.
  -->

<resources>
    <string name="app_name">AwesomeRickMorty</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SnowBall</string>
    <string name="nav_header_subtitle">rickandmortyapi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Characters</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tv_character_name">Tammy Guetermann</string>
    <string name="message_somethin_wrong">Something went wrong, no connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">please wait</string>


    <string name="owner">HUAWEI Developer</string>
    <string name="copyright_info">Copyright 2020. Huawei Technologies Co., Ltd</string>
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_ad_dismissed">Ad is dismissed.</string>
    <string name="message_splashAd">App Rick Mortys</string>


</resources>
