<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by rogergcc
  ~ Copyright Ⓒ 2019 . All rights reserved.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_locations"

            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_stars_24"
            android:title="@string/menu_favorites" />
        <item
            android:visible="false"
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item
        android:visible="false"

        >
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
